Implemented User Card and Login Base

--- a/src/app/home-screen/home-screen.component.html
+++ b/src/app/home-screen/home-screen.component.html
@@ -1,1 +1,14 @@
 <label for="">ROOM ID<input type="text"></label>
+
+<div class="container">
+    <div class="header" >
+        <button (click)="logOut()">LOGOUT</button>
+      </div>
+    <div class="gamble-table">
+        <app-gamble-table></app-gamble-table>
+    </div>
+    <div class="user-points">
+        <user-points-display></user-points-display>
+    </div>
+
+</div>
