--- a/src/app/gamble-table/gamble-table.component.html
+++ b/src/app/gamble-table/gamble-table.component.html
@@ -1,4 +1,4 @@
-<div class="contaienr">
+<div class="container">
   <div class="board">
     <div class="storyPoint" *ngIf="!isCoffee">{{ storyPoint }}</div>
     <img *ngIf="isCoffee" src="../../assets/images/coffee.png" />
