--- a/src/app/home-screen/home-screen.component.html
+++ b/src/app/home-screen/home-screen.component.html
@@ -4,11 +4,12 @@
     <div class="header" >
         <button (click)="logOut()">LOGOUT</button>
       </div>
-    <div class="gamble-table">
-        <app-gamble-table></app-gamble-table>
+    <div class="content">
+        <div class="user-points">
+            <user-points-display></user-points-display>
+        </div>
+        <div class="gamble-table">
+            <app-gamble-table></app-gamble-table>
+        </div>
     </div>
-    <div class="user-points">
-        <user-points-display></user-points-display>
-    </div>
-
 </div>
