more layout changes

--- a/src/app/gamble-table/gamble-table.component.html
+++ b/src/app/gamble-table/gamble-table.component.html
@@ -1,7 +1,6 @@
 <div class="container">
   <div class="board">
-    <div class="storyPoint" *ngIf="!isCoffee">{{ storyPoint }}</div>
-    <img *ngIf="isCoffee" src="../../assets/images/coffee.png" />
+    <div class="title">MC-280198: Designing a Gambling System</div>
   </div>
 
   <div class="cards">
