CSS update for cards

--- a/src/app/home-screen/home-screen.component.scss
+++ b/src/app/home-screen/home-screen.component.scss
@@ -1,13 +1,18 @@
 :host {
-    .content {
-        display: flex;
-    }
-    .gamble-table{
-        flex-grow: 1;
-    }
-    .header{
-        display: flex;
-        margin: 5px 10px;
-        justify-content: flex-end;
-    }
+  .content {
+    display: flex;
+  }
+  .user-points {
+    display: flex;
+    align-items: center;
+    width: 30%;
+  }
+  .gamble-table {
+    flex-grow: 1;
+  }
+  .header {
+    display: flex;
+    margin: 5px 10px;
+    justify-content: flex-end;
+  }
 }
