--- a/src/app/gamble-table/gamble-table.component.scss
+++ b/src/app/gamble-table/gamble-table.component.scss
@@ -1,53 +1,55 @@
-.board{
-    text-align: center;
-    border: 1px solid black;
-    padding: 50px;
-    font-size: 50px;
-    min-height: 120px;
+.board {
+  text-align: center;
+  border: 1px solid black;
+  padding: 50px;
+  font-size: 50px;
+  min-height: 120px;
 
-    .coffee{
-      display: block;
-      height: 100%;
-      width: 40%;
-    }
-    img{
-      width: 10%;
-    }
-    .hideTag
-    {
-      display: none;
-    }
-
+  .coffee {
+    display: block;
+    height: 100%;
+    width: 40%;
+  }
+  img {
+    width: 10%;
+  }
+  .hideTag {
+    display: none;
+  }
 }
-.cards{
-    display: flex;
-    width: 100%;
-    margin-top: 50px;
-    justify-content: center;
-    .isChecked{
-        margin-top: 10px !important;
-        background-color: rgba(0, 234, 255, 0.139);
-    }
-    :hover{
-      background-color: rgba(0, 234, 255, 0.139);
-    }
-    .card{
-        text-align: center;
-        height: 100px;
-        padding: 10px;
-        margin: 40px 10px;
-        width: 75px;
-        border: 1px solid black;
-        box-shadow: 2px 2px 4px;
-        cursor: pointer;
-        .card-number{
-            margin-top: 50%;
-            pointer-events: none;
-        }
-        img{
-          width: 100%;
-          height: 100%;
-        }
+.cards {
+  display: flex;
+  width: 100%;
+  margin-top: 50px;
+  justify-content: center;
+  
+  .card {
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.6);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    transition: all 0.3s ease-in-out;
 
+    text-align: center;
+    height: 100px;
+    margin: 40px 10px;
+    width: 75px;
+    cursor: pointer;
+    .card-number {
+      margin-top: 50%;
+      pointer-events: none;
     }
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
+    &.isChecked {
+      margin-top: 10px !important;
+      background-color: rgb(167, 199, 231, 0.4);
+    }
+    &:hover {
+      background-color: rgb(167, 199, 231, 0.4);
+    }
+  }
 }
