--- a/src/app/user-points-display/user-points-display.ctrl.scss
+++ b/src/app/user-points-display/user-points-display.ctrl.scss
@@ -2,7 +2,6 @@
   .table th,
   .table td {
     padding: 12px;
-    text-align: left;
     border-bottom: 1px solid #ddd;
   }
 
@@ -12,8 +11,11 @@
     justify-content: center;
     height: 50px;
     width: 40px;
-    border: 1px solid black;
-    box-shadow: 2px 2px 4px;
     cursor: pointer;
+
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+    border: 1px solid rgba(255, 255, 255, 0.3);
   }
 }
