--- a/src/app/user-points-display/user-points-display.ctrl.html
+++ b/src/app/user-points-display/user-points-display.ctrl.html
@@ -1,21 +1,27 @@
 <div class="container">
-<button class="btn btn-primary" (click)="flipCard()">
-     {{ isFlipped ? 'Hide Points' : 'Show Points' }}
-</button>
+  <button class="btn btn-primary" (click)="flipCard()">
+    {{ isFlipped ? 'Hide Points' : 'Show Points' }}
+  </button>
 
-    <table class="table table-striped table-hover">
-        <td>User</td>
-        <td>Points</td>
-        <tr *ngFor="let user of users">
-            <td>{{user.name}}</td>
-            <td>
-                <div class="card">
-                    <span *ngIf="isFlipped">
-                        {{user.points}}
-                    </span>
-                  
-                </div>
-               </td>
-    </table>
+  <table class="table table-striped table-hover">
+    <td>User</td>
+    <td>Points</td>
+    <tr *ngFor="let user of users">
+      <td>{{user.name}}</td>
+      <td>
+        <div class="card">
+          @if (isFlipped) {
+          <div class="flip-card-back">
+            <span>{{ user.points }}</span>
+          </div>
+          } @else {
+
+          <div class="flip-card-front">
+            <span>Flip</span>
+          </div>
+          }
+        </div>
+      </td>
+    </tr>
+  </table>
 </div>
-
