--- a/src/app/user-points-display/user-points-display.ctrl.scss
+++ b/src/app/user-points-display/user-points-display.ctrl.scss
@@ -6,6 +6,7 @@
   }
 
   .card {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -17,5 +18,28 @@
     padding: 10px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
     border: 1px solid rgba(255, 255, 255, 0.3);
+    img {
+      width: 100%;
+      height: 100%;
+      padding: 0;
+    }
+
+    transform-style: preserve-3d;
+    transition: all 0.5s ease;
+
+    .flip-card-back,
+    .flip-card-front {
+      position: absolute;
+      backface-visibility: hidden;
+    }
+
+    .flip-card-back {
+      transform: rotateY(180deg);
+    }
+
+    &.flipped {
+      transform: rotateY(180deg);
+      transition: all 0.5s ease;
+    }
   }
 }
