--- a/src/app/home-screen/home-screen.component.html
+++ b/src/app/home-screen/home-screen.component.html
@@ -1,6 +1,8 @@
 <div class="container">
     <div class="header" >
-        <button (click)="logOut()">LOGOUT</button>
+        <i class="fa-solid fa-circle-user"></i>
+        <span>{{username}}</span>
+        <button (click)="logOut()">Log Out</button>
     </div>
     <div class="content">
         <div class="user-points">
