--- a/src/app/home-screen/home-screen.component.scss
+++ b/src/app/home-screen/home-screen.component.scss
@@ -13,14 +13,14 @@
   .header {
     width: 100%;
     display: flex;
-   margin-bottom: 10px;
+    margin-bottom: 10px;
     justify-content: flex-end;
     height: 60px;
     align-items: center;
-  //  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
+    //  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-bottom: 2px solid rgba(255, 255, 255, 0.3);
-    span{
+    span {
       margin-right: 10px;
       margin-left: 10px;
     }
@@ -30,10 +30,10 @@
       width: 80px;
       height: 30px;
       border: none;
-      font-size: 14px; 
-      border-radius: 30px;
+      font-size: 14px;
+      //border-radius: 30px;
       cursor: pointer;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
   }
 }
