--- a/src/app/login-component/login.component.html
+++ b/src/app/login-component/login.component.html
@@ -1,17 +1,27 @@
 <div>
-    <h1>Login</h1>
-    <form [formGroup]="loginForm">
-        <p>{{loginForm.value | json}}</p>
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" id="username" formControlName="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" formControlName="password" placeholder="Password">
-        </div>
-    </form>
-    <button (click)="onLogIn()">LOGIN</button>
+  <h1>Login</h1>
+  <form [formGroup]="loginForm">
+    <p>{{ loginForm.value | json }}</p>
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input
+        type="text"
+        id="username"
+        formControlName="username"
+        placeholder="Username"
+      />
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input
+        type="password"
+        id="password"
+        formControlName="password"
+        placeholder="Password"
+      />
+    </div>
+  </form>
+  <button (click)="onLogIn()">LOGIN</button>
 </div>
 
-<label for="">ROOM ID<input type="text"></label>
+<label for="">ROOM ID<input type="text" /></label>
