--- a/src/app/user-points-display/user-points-display.ctrl.html
+++ b/src/app/user-points-display/user-points-display.ctrl.html
@@ -3,6 +3,10 @@
     {{ isFlipped ? 'Hide Points' : 'Show Points' }}
   </button>
 
+  <button class="btn btn-primary" (click)="onDeleteEstimates()">
+    Delete Estimates
+  </button>
+
   <table class="table table-striped table-hover">
     <td>User</td>
     <td>Points</td>
@@ -11,11 +15,16 @@
       <td>
         <div class="card" [ngClass]="{'flipped': isFlipped}">
           <div class="flip-card-front">
+            @if(user.points > 0){
             <img src="../../assets/images/scrum.png" alt="Scrum Poker" />
+            } @else{ <span>-</span>}
           </div>
 
           <div class="flip-card-back">
+            @if(user.points > 0){
+
             <span>{{ user.points }}</span>
+            } @else{ <span>-</span>}
           </div>
         </div>
       </td>
