--- a/src/app/user-points-display/user-points-display.ctrl.scss
+++ b/src/app/user-points-display/user-points-display.ctrl.scss
@@ -4,7 +4,20 @@
     padding: 12px;
     border-bottom: 1px solid #ddd;
   }
-
+  button {
+    margin-right: 10px;
+    width: 120px;
+    height: 30px;
+    border: none;
+    font-size: 14px;
+    //border-radius: 30px;
+    cursor: pointer;
+    margin-bottom: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  .container {
+    text-align: center;
+  }
   .card {
     position: relative;
     display: flex;
@@ -12,7 +25,6 @@
     justify-content: center;
     height: 50px;
     width: 40px;
-    cursor: pointer;
 
     border-radius: 10px;
     padding: 10px;
