--- a/src/app/gamble-table/gamble-table.component.scss
+++ b/src/app/gamble-table/gamble-table.component.scss
@@ -46,10 +46,10 @@
 
     &.isChecked {
       margin-top: 10px !important;
-      background-color: rgb(167, 199, 231, 0.4);
+      background-color: #d9dbe8;
     }
     &:hover {
-      background-color: rgb(167, 199, 231, 0.4);
+      background-color: #d9dbe8;
     }
   }
 }
