--- a/src/app/user-points-display/user-points-display.ctrl.scss
+++ b/src/app/user-points-display/user-points-display.ctrl.scss
@@ -5,6 +5,7 @@
     border-bottom: 1px solid #ddd;
   }
   button {
+    background-color: #d9dbe8;
     margin-right: 10px;
     width: 120px;
     height: 30px;
