--- a/src/app/home-screen/home-screen.component.html
+++ b/src/app/home-screen/home-screen.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="content">
     <div class="user-points">
-      <user-points-display></user-points-display>
+      <user-points-display  [username]="username"></user-points-display>
     </div>
     <div class="gamble-table">
       <app-gamble-table></app-gamble-table>
