create room base and backend integration

--- a/src/app/home-screen/home-screen.component.html
+++ b/src/app/home-screen/home-screen.component.html
@@ -2,6 +2,7 @@
   <div class="header">
     <i class="fa-solid fa-circle-user"></i>
     <span>{{ username }}</span>
+    <!-- <button (click)="createRoom()">Create Room</button> -->
     <button (click)="logOut()">Log Out</button>
   </div>
   <div class="content">
