--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
+  font-family: "Arial", sans-serif;
+  margin: 0;
+
+  .cdk-overlay-backdrop {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+  .cdk-global-scrollblock {
+    position: fixed;
+    width: 100%;
+    overflow-y: scroll;
+  }
 }
