--- a/src/app/create-room/create-room.component.scss
+++ b/src/app/create-room/create-room.component.scss
@@ -1,15 +1,12 @@
-:host{
-    
-    background-color: white;
-    .header
-    {
-        font-size: 20px;
-    }
-    .content 
-    {
-       // font-weight: 400;
-        font-size: 14px;
-        line-height: 1.5;
-        color: rgb(128, 128, 128)
-    }
+:host {
+  background-color: white;
+  .header {
+    font-size: 20px;
+  }
+  .content {
+    // font-weight: 400;
+    font-size: 14px;
+    line-height: 1.5;
+    color: rgb(128, 128, 128);
+  }
 }
