--- a/src/app/home-screen/home-screen.component.html
+++ b/src/app/home-screen/home-screen.component.html
@@ -13,12 +13,15 @@
 
     <button (click)="logOut()">Log Out</button>
   </div>
-  <div class="content">
+  <div class="content" *ngIf="!showDisplayName">
     <div class="user-points">
       <user-points-display [username]="username"></user-points-display>
     </div>
     <div class="gamble-table">
       <app-gamble-table></app-gamble-table>
     </div>
+  </div>
+  <div class="content" *ngIf="showDisplayName">
+    <input type="text" placeholder="Display Name" [(ngModel)]="displayName" />
   </div>
 </div>
