--- a/src/app/create-room/create-room.component.scss
+++ b/src/app/create-room/create-room.component.scss
@@ -9,4 +9,10 @@
     line-height: 1.5;
     color: rgb(128, 128, 128);
   }
+
+  input {
+    height: 24px;
+    width: 60%;
+    margin-bottom: 10px;
+  }
 }
