--- a/src/app/home-screen/home-screen.component.html
+++ b/src/app/home-screen/home-screen.component.html
@@ -14,12 +14,26 @@
     <button (click)="logOut()">Log Out</button>
   </div>
   <div class="content">
-    <div class="user-points">
-      <user-points-display [username]="username" [roomId]="roomId"></user-points-display>
-    </div>
-    <div class="gamble-table">
-      <app-gamble-table></app-gamble-table>
-    </div>
+    @if(validUser){
+      <div class="user-points">
+        <user-points-display [username]="username" [roomId]="roomId"></user-points-display>
+      </div>
+      <div class="gamble-table">
+        <app-gamble-table></app-gamble-table>
+      </div>
+    }
+    @else{
+      <label for="displayName">Display Name </label><br />
+      <input
+        type="text"
+        id="displayName"
+        placeholder="Display Name"
+        [(ngModel)]="displayName"
+      /><br />
+
+      <button (click)="joinRoom()">Join Room</button>
+    }
+    
   </div>
   
 </div>
