Signup API Integration

--- a/src/app/login-component/login.component.html
+++ b/src/app/login-component/login.component.html
@@ -1,5 +1,6 @@
 <div>
   <div class="header">
+    <button (click)="userSignUp()">SignUp</button>
     <button (click)="userLogin()">Login</button>
     <button (click)="createRoom()">Create Room</button>
   </div>
